fix: navbar z-index

--- a/app/globals.css
+++ b/app/globals.css
@@ -220,27 +220,6 @@ a[href="/docs/blocks/ai-chat"]:not(#browse-blocks-button)::after {
   border: 1px solid rgba(255, 255, 255, 0.2);
 }
 
-a[href="/docs/components/vercel-v0-chat"] {
-  position: relative;
-  padding-right: 2.5rem;
-}
-
-a[href="/docs/components/vercel-v0-chat"]::after {
-  content: "New";
-  position: absolute;
-  right: 0.2rem;
-  top: 50%;
-  transform: translateY(-50%);
-  background-color: rgba(59, 180, 75, 0.2);
-  color: #3bb44b;
-  padding: 0.05rem 0.2rem;
-  border-radius: 0.25rem;
-  font-size: 0.75rem;
-  font-weight: 500;
-  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-  border: 1px solid rgba(255, 255, 255, 0.2);
-}
-
 /* Higher z-index to cover text overflow the navbar */
 #nd-subnav {
   z-index: 100;
